src/objects/MPOT_Project_Milestone__c.object
<CustomObject>



    <description>MPOT Project milestones and sub-milestones information is captured</description>
    <fields>
        <fullName>Baseline_End_Date__c</fullName>
        <label>Baseline End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_Start_Date__c</fullName>
        <label>Baseline Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>Actual End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Note__c</fullName>
        <label>Milestone Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                    <default>true</default>
                    <label>Ongoing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_detail__c</fullName>
        <label>Milestone detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_name__c</fullName>
        <label>Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_End_Date__c</fullName>
        <label>New End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Start_Date__c</fullName>
        <label>New Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>GLBL_Project__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Change__c</fullName>
        <label>Reason For Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Actual Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Milestone_name__c</fullName>
        <label>Sub-Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Milestone</label>
    <nameField>
        <displayFormat>MN-{000000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_must_be_Greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_date__c &lt;  Start_date__c</errorConditionFormula>
        <errorMessage>Start Date Cannot be greater than End Date.</errorMessage>
    </validationRules>
</CustomObject>